--- a/dongsim2/pom.xml
+++ b/dongsim2/pom.xml
@@ -34,6 +34,28 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        
+        
+        <!-- JSP 쓰기 -->
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+		</dependency>
+		
+
+	    
+	    <!--- JSTL 필요 : JSTL Dependency를 Maven에 추가해줘야 함.-->
+  		<dependency>
+		      <groupId>javax.servlet</groupId>
+		      <artifactId>jstl</artifactId>
+		</dependency>
+		  
+		<dependency>
+		      <groupId>org.apache.tiles</groupId>
+		      <artifactId>tiles-jsp</artifactId>
+		      <version>3.0.7</version>
+		 </dependency>
+ 
 		
 	</dependencies>
 
