--- a/dongsim2/src/main/resources/application.properties
+++ b/dongsim2/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=80
+
+# set view
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+
+
+#Error Page Setting
+server.error.whitelabel.enabled=false
