--- a/dongsim2/src/main/resources/application.properties
+++ b/dongsim2/src/main/resources/application.properties
@@ -3,8 +3,16 @@ server.port=80
 # set view
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+spring.mvc.static-path-pattern=/**
+
+spring.resources.static-locations=classpath:/static/
+spring.resources.add-mappings=true 
 
 
 
 #Error Page Setting
 server.error.whitelabel.enabled=false
+
+#logger 설정
+logging.file=dongsim2.log
+logging.level.com.dongsim2.app=INFO
